# atlas

./: .gitignore  ATLAS_design_report.md  ATLAS_implementation_plan.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
clients/py/: README.md  pyproject.toml
clients/py/atlas/: __init__.py  client.py
crates/atlas-a2a/: Cargo.toml
crates/atlas-a2a/src/: lib.rs
crates/atlas-auth/: Cargo.toml
crates/atlas-auth/src/: lib.rs  oidc.rs  saml.rs  scim.rs  session.rs
crates/atlas-backup/: Cargo.toml
crates/atlas-backup/src/: export.rs  incremental.rs  lib.rs  main.rs  replication.rs  schedule.rs
crates/atlas-bench/: Cargo.toml
crates/atlas-bench/benches/: chunk_put_get.rs  fs_write_read.rs
crates/atlas-bench/src/: lib.rs
crates/atlas-chaos/: Cargo.toml
crates/atlas-chaos/src/: fault.rs  invariant.rs  lib.rs  main.rs  report.rs  runner.rs  scenario.rs  workload.rs
crates/atlas-chunk/: Cargo.toml
crates/atlas-chunk/src/: lib.rs
crates/atlas-compliance/: Cargo.toml
crates/atlas-compliance/src/: control.rs  evidence.rs  gap.rs  lib.rs  report.rs
crates/atlas-conformance/: Cargo.toml
crates/atlas-conformance/src/: lib.rs
crates/atlas-core/: Cargo.toml
crates/atlas-core/src/: error.rs  hash.rs  kind.rs  lib.rs  time.rs
crates/atlas-deploy/: Cargo.toml
crates/atlas-deploy/src/: main.rs
crates/atlas-explorer-ipc/: Cargo.toml
crates/atlas-explorer-ipc/src/: browser.rs  lib.rs  lineage.rs  policy.rs  search.rs  version.rs
crates/atlas-fileprovider-mac/: Cargo.toml
crates/atlas-fileprovider-mac/src/: bridge.rs  fileprovider.rs  finder_sync.rs  lib.rs  quicklook.rs
crates/atlas-fmt-safetensors/: Cargo.toml
crates/atlas-fmt-safetensors/src/: lib.rs
crates/atlas-fs/: Cargo.toml
crates/atlas-fs/src/: engine.rs  lib.rs  path.rs
crates/atlas-fuse/: Cargo.toml
crates/atlas-fuse/src/: lib.rs
crates/atlas-gc/: Cargo.toml
crates/atlas-gc/src/: lib.rs
crates/atlas-governor/: Cargo.toml
crates/atlas-governor/src/: audit.rs  lib.rs  policy.rs  redact.rs  sign.rs  token.rs
crates/atlas-grpc/: Cargo.toml
crates/atlas-grpc/src/: lib.rs
crates/atlas-gvfs/: Cargo.toml
crates/atlas-gvfs/src/: core.rs  desktop.rs  gvfs.rs  kio.rs  lib.rs
crates/atlas-indexer/: Cargo.toml
crates/atlas-indexer/src/: lib.rs  text_index.rs  vector_store.rs
crates/atlas-ingest/: Cargo.toml
crates/atlas-ingest/src/: embedder.rs  formats.rs  lib.rs  policy.rs  reembed.rs
crates/atlas-lineage/: Cargo.toml
crates/atlas-lineage/src/: journal.rs  lib.rs  rollup.rs
crates/atlas-mcp/: Cargo.toml
crates/atlas-mcp/src/: capability.rs  core.rs  lib.rs  tools.rs  wire.rs
crates/atlas-meta/: Cargo.toml
crates/atlas-meta-fdb/: Cargo.toml
crates/atlas-meta-fdb/src/: lib.rs
crates/atlas-meta/src/: keys.rs  lib.rs  sled_store.rs  store.rs  versioned.rs
crates/atlas-migrate/: Cargo.toml
crates/atlas-migrate/src/: lib.rs  main.rs  pipeline.rs  source.rs
crates/atlas-net/: Cargo.toml
crates/atlas-net/src/: chunk_client.rs  lib.rs  meta_client.rs  runtime.rs
crates/atlas-net/tests/: rpc_roundtrip.rs
crates/atlas-object/: Cargo.toml
crates/atlas-object/src/: codec.rs  lib.rs  manifest.rs
crates/atlas-object/tests/: proptest_manifests.rs
crates/atlas-onboarding/: Cargo.toml
crates/atlas-onboarding/src/: installer.rs  lib.rs  sample_data.rs  wizard.rs
crates/atlas-placement/: Cargo.toml
crates/atlas-placement/src/: lib.rs
crates/atlas-proto/: Cargo.toml
crates/atlas-proto/src/: frame.rs  lib.rs  messages.rs
crates/atlas-py/: Cargo.toml
crates/atlas-py/src/: lib.rs
crates/atlas-quota/: Cargo.toml
crates/atlas-quota/src/: enforcer.rs  lib.rs  quota.rs  tenant.rs
crates/atlas-replicate/: Cargo.toml
crates/atlas-replicate/src/: lib.rs
crates/atlas-replicate/tests/: crash_recovery.rs
crates/atlas-rest/: Cargo.toml
crates/atlas-rest/src/: lib.rs
crates/atlas-s3/: Cargo.toml
crates/atlas-s3/src/: lib.rs  sigv4.rs
crates/atlas-shellext-win/: Cargo.toml
crates/atlas-shellext-win/src/: columns.rs  context_menu.rs  lib.rs  registry.rs
crates/atlas-storage/: Cargo.toml
crates/atlas-storage/src/: handlers.rs  lib.rs  main.rs  server.rs
crates/atlas-toolwire/: Cargo.toml
crates/atlas-toolwire/src/: lib.rs
crates/atlas-transport/: Cargo.toml
crates/atlas-transport/src/: lib.rs
crates/atlas-tuning/: Cargo.toml
crates/atlas-tuning/src/: lib.rs  profile.rs  tuner.rs
crates/atlas-version/: Cargo.toml
crates/atlas-version/src/: lib.rs
crates/atlas-wfsp/: Cargo.toml
crates/atlas-wfsp/src/: config.rs  driver.rs  lib.rs  ops.rs  tests.rs
crates/atlasctl/: Cargo.toml
crates/atlasctl/src/: main.rs
desktop/explorer/: package.json
desktop/explorer/src/: app.js  index.html  styles.css
desktop/explorer/src-tauri/: Cargo.toml
desktop/explorer/src-tauri/src/: commands.rs  main.rs  state.rs
docs/: CHARTER.md  TECHNICAL_DEBT.md
docs/adr/: 0001-record-architecture-decisions.md  0002-blake3-and-4mib-chunks.md  0003-sled-as-initial-metadata-backend.md  README.md
docs/runbooks/: disaster-recovery.md  game-day.md
docs/spec/: v0.1.md
services/embedder/: pyproject.toml
services/embedder/src/embedder/: __init__.py  main.py
services/web/: Cargo.toml
services/web/src/: api.rs  main.rs  metrics.rs  server.rs  static_files.rs
services/web/static/: index.html
