[workspace]
resolver = "2"
members = [
    "crates/atlas-core",
    "crates/atlas-chunk",
    "crates/atlas-object",
    "crates/atlas-meta",
    "crates/atlas-version",
    "crates/atlas-fs",
    "crates/atlas-fuse",
    "crates/atlas-fmt-safetensors",
    "crates/atlasctl",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/PraveenAnandhanathan/atlas"
homepage = "https://github.com/PraveenAnandhanathan/atlas"
authors = ["ATLAS contributors"]

[workspace.dependencies]
# Hashing
blake3 = "1.5"

# Serialization — bincode v1 legacy for canonical form (see spec v0.1 §3)
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"

# Metadata backend (ADR-0003)
sled = "0.34"

# Error / result
thiserror = "1"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Misc
hex = "0.4"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1"
tempfile = "3"

# Internal crates, referenced by siblings
atlas-core = { path = "crates/atlas-core", version = "0.1.0" }
atlas-chunk = { path = "crates/atlas-chunk", version = "0.1.0" }
atlas-object = { path = "crates/atlas-object", version = "0.1.0" }
atlas-meta = { path = "crates/atlas-meta", version = "0.1.0" }
atlas-version = { path = "crates/atlas-version", version = "0.1.0" }
atlas-fs = { path = "crates/atlas-fs", version = "0.1.0" }
atlas-fmt-safetensors = { path = "crates/atlas-fmt-safetensors", version = "0.1.0" }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
