[workspace]
resolver = "2"
members = [
    "crates/atlas-core",
    "crates/atlas-chunk",
    "crates/atlas-object",
    "crates/atlas-meta",
    "crates/atlas-version",
    "crates/atlas-fs",
    "crates/atlas-fuse",
    "crates/atlas-fmt-safetensors",
    "crates/atlasctl",
    # Phase 2
    "crates/atlas-proto",
    "crates/atlas-net",
    "crates/atlas-storage",
    "crates/atlas-replicate",
    "crates/atlas-placement",
    "crates/atlas-transport",
    "crates/atlas-meta-fdb",
    "crates/atlas-gc",
    "crates/atlas-bench",
    "crates/atlas-deploy",
    "crates/atlas-py",
    # Phase 3 — Semantic
    "crates/atlas-indexer",
    "crates/atlas-ingest",
    # Phase 4 — Lineage and governance
    "crates/atlas-lineage",
    "crates/atlas-governor",
    # Phase 5 — MCP and protocols
    "crates/atlas-mcp",
    "crates/atlas-a2a",
    "crates/atlas-rest",
    "crates/atlas-grpc",
    "crates/atlas-s3",
    "crates/atlas-toolwire",
    "crates/atlas-conformance",
    # Phase 6 — Desktop integration
    "crates/atlas-wfsp",
    "crates/atlas-shellext-win",
    "crates/atlas-fileprovider-mac",
    "crates/atlas-gvfs",
    "crates/atlas-explorer-ipc",
    "crates/atlas-onboarding",
    # Phase 7 — Production hardening
    "crates/atlas-chaos",
    "crates/atlas-backup",
    "crates/atlas-auth",
    "crates/atlas-compliance",
    "crates/atlas-tuning",
    "crates/atlas-quota",
    "crates/atlas-migrate",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/PraveenAnandhanathan/atlas"
homepage = "https://github.com/PraveenAnandhanathan/atlas"
authors = ["ATLAS contributors"]

[workspace.dependencies]
# Hashing
blake3 = "1.5"

# Serialization — bincode v1 legacy for canonical form (see spec v0.1 §3)
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"

# Metadata backend (ADR-0003)
sled = "0.34"

# Error / result
thiserror = "1"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Misc
hex = "0.4"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1"
tempfile = "3"
criterion = "0.5"

# Phase 2 — async + RPC
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "sync", "signal", "time"] }
async-trait = "0.1"
bytes = "1"
futures = "0.3"

# PyO3
pyo3 = { version = "0.22", features = ["extension-module"] }

# FUSE (Linux only)
fuser = "0.14"
libc = "0.2"

# FoundationDB (feature-gated; needs system libfdb_c)
foundationdb = { version = "0.9", features = ["fdb-7_3"] }

# Phase 3 — Semantic plane
tantivy = "0.22"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

# Phase 4 — Lineage and governance
ed25519-dalek = "2"
sha2 = "0.10"
regex = "1"
serde_yaml = "0.9"
rand = "0.8"

# Internal crates, referenced by siblings
atlas-core = { path = "crates/atlas-core", version = "0.1.0" }
atlas-chunk = { path = "crates/atlas-chunk", version = "0.1.0" }
atlas-object = { path = "crates/atlas-object", version = "0.1.0" }
atlas-meta = { path = "crates/atlas-meta", version = "0.1.0" }
atlas-version = { path = "crates/atlas-version", version = "0.1.0" }
atlas-fs = { path = "crates/atlas-fs", version = "0.1.0" }
atlas-fmt-safetensors = { path = "crates/atlas-fmt-safetensors", version = "0.1.0" }
atlas-proto = { path = "crates/atlas-proto", version = "0.1.0" }
atlas-net = { path = "crates/atlas-net", version = "0.1.0" }
atlas-replicate = { path = "crates/atlas-replicate", version = "0.1.0" }
atlas-placement = { path = "crates/atlas-placement", version = "0.1.0" }
atlas-transport = { path = "crates/atlas-transport", version = "0.1.0" }
atlas-indexer = { path = "crates/atlas-indexer", version = "0.1.0" }
atlas-ingest = { path = "crates/atlas-ingest", version = "0.1.0" }
atlas-lineage = { path = "crates/atlas-lineage", version = "0.1.0" }
atlas-governor = { path = "crates/atlas-governor", version = "0.1.0" }
atlas-mcp = { path = "crates/atlas-mcp", version = "0.1.0" }
atlas-a2a = { path = "crates/atlas-a2a", version = "0.1.0" }
atlas-rest = { path = "crates/atlas-rest", version = "0.1.0" }
atlas-grpc = { path = "crates/atlas-grpc", version = "0.1.0" }
atlas-s3 = { path = "crates/atlas-s3", version = "0.1.0" }
atlas-toolwire = { path = "crates/atlas-toolwire", version = "0.1.0" }
atlas-conformance = { path = "crates/atlas-conformance", version = "0.1.0" }
# Phase 6
atlas-wfsp = { path = "crates/atlas-wfsp", version = "0.1.0" }
atlas-shellext-win = { path = "crates/atlas-shellext-win", version = "0.1.0" }
atlas-fileprovider-mac = { path = "crates/atlas-fileprovider-mac", version = "0.1.0" }
atlas-gvfs = { path = "crates/atlas-gvfs", version = "0.1.0" }
atlas-explorer-ipc = { path = "crates/atlas-explorer-ipc", version = "0.1.0" }
atlas-onboarding = { path = "crates/atlas-onboarding", version = "0.1.0" }
# Phase 7
atlas-storage = { path = "crates/atlas-storage", version = "0.1.0" }
atlas-chaos = { path = "crates/atlas-chaos", version = "0.1.0" }
atlas-backup = { path = "crates/atlas-backup", version = "0.1.0" }
atlas-auth = { path = "crates/atlas-auth", version = "0.1.0" }
atlas-compliance = { path = "crates/atlas-compliance", version = "0.1.0" }
atlas-tuning = { path = "crates/atlas-tuning", version = "0.1.0" }
atlas-quota = { path = "crates/atlas-quota", version = "0.1.0" }
atlas-migrate = { path = "crates/atlas-migrate", version = "0.1.0" }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
