[package]
name = "atlas-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ATLAS enterprise authentication: OIDC, SAML 2.0, SCIM 2.0 (T7.3)."

[dependencies]
atlas-core.workspace = true
atlas-governor.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio = { workspace = true }
rand.workspace = true
sha2.workspace = true
hex.workspace = true
uuid.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
