[package]
name = "atlas-chunk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ATLAS content-addressed chunk store (local backend for Phase 0)."

[dependencies]
atlas-core = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
