[package]
name = "atlas-compliance"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ATLAS SOC 2 / ISO 27001 control readiness framework (T7.4)."

[dependencies]
atlas-core.workspace = true
atlas-governor.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
time.workspace = true

[dev-dependencies]
tempfile.workspace = true
