[package]
name = "atlas-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ATLAS shared types: hashes, object kinds, author, timestamps, errors."

[dependencies]
blake3 = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
time = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
