[package]
name = "atlas-explorer-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "IPC command/event types shared between the Tauri backend and the TypeScript frontend (T6.6)."

[dependencies]
atlas-core.workspace = true
atlas-fs.workspace = true
atlas-mcp.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile.workspace = true
