[package]
name = "atlas-fileprovider-mac"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ATLAS macOS FileProvider extension, Finder Sync, and Quick Look generators (T6.3, T6.4)."

[dependencies]
atlas-core.workspace = true
atlas-fs.workspace = true
atlas-fmt-safetensors.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
