[package]
name = "atlas-fmt-safetensors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Safetensors format plugin for ATLAS — header parsing and tensor-slice access."

[dependencies]
atlas-core = { workspace = true }
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
