[package]
name = "atlas-fuse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ATLAS FUSE adapter (Linux). Stub in v0.1; full ops in T0.7."

[dependencies]
atlas-core = { workspace = true }
atlas-fs = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

# Real fuser dependency lands when we wire up the Linux build target.
# Phase 0 deliverable is the trait-shaped stub so callers can compile
# against a stable surface; the actual VFS bridge is T0.7.
[target.'cfg(target_os = "linux")'.dependencies]
# fuser = "0.14"   # uncomment when T0.7 lands

[features]
default = []
# When `linux-fuse` is enabled the crate pulls in `fuser` and exposes a
# real `mount()` entry point. Off by default so the workspace builds on
# every OS.
linux-fuse = []
