[package]
name = "atlas-fuse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ATLAS FUSE adapter (Linux). Read-only mount under the linux-fuse feature."

[dependencies]
atlas-core = { workspace = true }
atlas-fs = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
fuser = { workspace = true, optional = true }
libc = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
# Enable on Linux to pull in `fuser` and expose the real `mount()`.
linux-fuse = ["dep:fuser", "dep:libc"]
