[package]
name = "atlas-governor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ATLAS governance: policy engine, capability tokens, PII redaction, audit log."

[dependencies]
atlas-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
ed25519-dalek = "2"
sha2 = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
