[package]
name = "atlas-grpc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ATLAS gRPC service definitions and reflection table (T5.5)."

[dependencies]
atlas-mcp.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
atlas-fs.workspace = true
tempfile.workspace = true
