[package]
name = "atlas-gvfs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ATLAS Linux file-manager integrations: GVFS backend and KIO worker (T6.5)."

[dependencies]
atlas-core.workspace = true
atlas-fs.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
