[package]
name = "atlas-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ATLAS MCP server and shared capability core (T5.1, T5.2)."

[dependencies]
atlas-core.workspace = true
atlas-fs.workspace = true
atlas-version.workspace = true
atlas-object = { path = "../atlas-object", version = "0.1.0" }
atlas-indexer.workspace = true
atlas-lineage.workspace = true
atlas-governor.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
hex.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
