[package]
name = "atlas-meta-fdb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ATLAS metadata adapter for FoundationDB (feature-gated)."

[features]
default = []
fdb = ["dep:foundationdb"]

[dependencies]
atlas-core = { workspace = true }
atlas-meta = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
foundationdb = { workspace = true, optional = true }
