[package]
name = "atlas-object"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ATLAS object model — blob, file, directory manifests and commits."

[dependencies]
atlas-core = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
